Add 1.18 support